Load and store user data in a globally accessible closure.
Page break between recipes

Download Cookbook button works!

Abstracted away PDF download logic to utils/pdf.ts
